fix whitespace at bottom in mobile

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -720,3 +720,36 @@ ul.nav-list > li > a:hover {
         font-size: 3rem;
     }
 }
+
+@media only screen and (max-height: 480px) and (orientation: landscape) {
+    .departments-wrapper .dept-item {
+        height: auto;
+        margin: 0;
+        padding: 4rem;
+    }
+    .departments-wrapper .dept-item::before,
+    .departments-wrapper .dept-item:first-child::before,
+    .departments-wrapper .dept-item:last-child::before {
+        clip-path: none;
+    }
+    .departments-wrapper .text-wrapper {
+        max-width: none;
+        max-height: none;
+    }
+    .departments-wrapper .text-wrapper > .inner,
+    .btn-arrowed,
+    .departments-wrapper .dept-item:hover .text-wrapper > .inner,
+    .dept-contact .btn-arrowed,
+    .departments-wrapper .dept-item:hover .btn-arrowed,
+    .departments-wrapper .dept-item.selected .btn-arrowed {
+        transform: none;
+    }
+    .departments-wrapper .dept-item .text-wrapper > .title::before,
+    .departments-wrapper .dept-item:hover .text-wrapper > .title::before {
+        transform: none;
+        bottom: -1rem;
+    }
+    .dept-contact .btn-arrowed {
+        margin-top: 2rem;
+    }
+}
